# archive-celmouse

./: .gitignore  .gitmodules  Makefile  README.md  icon.icns  melos.yaml  pubspec.yaml
.dart_tool/: package_config.json
.dart_tool/extension_discovery/: vs_code.json
.github/: CODEOWNERS
.github/workflows/: move-to-in-progress.yml  on-assign.yml
desktop/: Makefile  pubspec.yaml
desktop/lib/: features.dart  features.g.dart  main.dart
desktop/linux/: CMakeLists.txt
desktop/windows/: CMakeLists.txt
flutter/: flutter_launcher_icons.yaml  pubspec.yaml
flutter/lib/: main.dart
mobile/: .gitignore  Makefile  README.md  pubspec.yaml  upload-keystore.jks
mobile/lib/: app.dart  assets.dart  getit.dart  main.dart
mobile/test/: widget_test.dart
nodejs/: .gitignore  index.html  main.js  main.js.map  main.ts  package-lock.json  package.json  preload.js  renderer.js
nodejs/src/: _robot.ts  robot.ts  websocket.ts
plugins/mouse/: .metadata
plugins/mouse/src/: CMakeLists.txt  mouse.c  mouse.h
plugins/mouse_c/: Makefile  ffigen.yaml  pubspec.yaml
plugins/mouse_rust/: Makefile  README.md  pubspec.yaml
server/: .gitignore  config.json  forge.config.ts  index.html  main.js  main.ts  my-certificate.crt  my-certificate.pfx  package-lock.json  package.json  tsconfig.json
server/certificates/: electron.provisionprofile  my-private-key.key
server/scripts/: notarize.js
server/src/: config.js  config.ts  controller.js  controller.ts  events.js  events.ts  index.html  index.ts  interface.d.ts  keyboard.js  keyboard.ts  logger.js  (+10 more)
website/: package-lock.json
(+347 files in other folders)
